add Varela font for numbers and 'Odinmath' label

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,18 @@
+@font-face {
+    font-family: DigitalSeven;
+    src: url(/fonts/digital-7-mono.woff2);
+}
 
+@font-face {
+    font-family: ValeraRound;
+    src: url(/fonts/varela-round.woff2);
+}
 
 button {
     width: 60px;
     aspect-ratio: 1/1;
+    font-family: ValeraRound;
+    font-size:x-large;
 }
 
 .buttons-container {
@@ -20,17 +30,16 @@ button {
 }
 
 .model {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: larger;
     background-color: #3B3E3D;
-    color: white;
+    color: #E2DED8;
 }
 
 .interface {
     display: flex;
     flex-direction: column;
-}
-
-.screen {
-
 }
 
 .face {
@@ -67,11 +76,14 @@ button {
 .screen {
     background-color: darkred;
     color: red;
-    width: 284px;
-    height: 32px;
-    flex: 1 0 0;
-    padding: 12px 16px;
+    width: 244px;
+    flex: 1 1 0;
+    padding: 12px 36px;
     border-radius: 16px 16px 0px 0px;
+    font-family: DigitalSeven;
+    font-size: 36px;
+    letter-spacing: 8px;
+    text-align: end;
 }
 
 .operators {
