--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,11 @@ button {
     font-size:x-large;
 }
 
+img {
+    width: 32px;
+    height: auto;
+}
+
 .buttons-container {
     display: flex;
     flex-wrap: wrap;
@@ -22,10 +27,6 @@ button {
     padding: 16px 16px;
     max-width: 284px;
     justify-content: center;
-    background-color: #3B3E3D;
-}
-
-.bezel {
     background-color: #3B3E3D;
 }
 
@@ -51,14 +52,17 @@ button {
 .case {
     padding: 90px 0px 24px 0px;
     background-color: #DDCEA4;
-    max-width: 360px;
+    max-width: 342px;
     border-radius: 16px 16px 8px 8px;
 }
 
 .bezel {
+    background-color: #3B3E3D;
     display: flex;
     max-width: 284px;
-    padding: 12px 16px;
+    padding: 8px 16px;
+    align-items: center;
+    border: #150F0F 1px solid;
 }
 
 .recessed-bezel {
@@ -69,7 +73,7 @@ button {
 }
 
 .logo {
-    margin-left: 24px;
+    margin-left: 52px;
     margin-right: auto;
 }
 
@@ -79,7 +83,7 @@ button {
     width: 244px;
     flex: 1 1 0;
     padding: 12px 36px;
-    border-radius: 16px 16px 0px 0px;
+    border-radius: 32px 32px 0px 0px;
     font-family: DigitalSeven;
     font-size: 36px;
     letter-spacing: 8px;
@@ -104,3 +108,4 @@ button {
 #equals {
     background-color: #FD9D56;
 }
+
